--- a/src/main/resources/templates/member/join.html
+++ b/src/main/resources/templates/member/join.html
@@ -7,7 +7,7 @@
       <div class="card">
         <div class="card-header">회원가입</div>
         <div class="card-body">
-          <form th:action="@{/member/join}" method="post">
+          <form th:action="@{/member/join}" th:object="${memberForm}" method="post">
             <div class="mb-3">
               <label for="username" class="form-label">아이디</label>
               <input type="text" class="form-control" name="username" id="username">
