--- a/src/main/resources/templates/member/login.html
+++ b/src/main/resources/templates/member/login.html
@@ -8,12 +8,12 @@
         <div class="card-body">
           <form th:action="@{/member/login}" method="post">
             <div class="mb-3">
-              <label for="memberId" class="form-label">아이디</label>
-              <input type="text" class="form-control" id="memberId">
+              <label for="username" class="form-label">아이디</label>
+              <input type="text" class="form-control" id="username" name="username">
             </div>
             <div class="mb-3">
               <label for="password" class="form-label">비밀번호</label>
-              <input type="password" class="form-control" id="password">
+              <input type="password" class="form-control" id="password" name="password">
             </div>
             <button type="submit" class="btn btn-primary">로그인</button>
           </form>
