--- a/src/main/resources/templates/product/detail.html
+++ b/src/main/resources/templates/product/detail.html
@@ -39,28 +39,23 @@
             </div>
 
             <div class="card-body">
-                <form method="POST" action="#">
-                    <!--     폼 내용      -->
+                <form sec:authorize="isAuthenticated()" action="@{/question/create}" method="POST" >
+                    <div class="mb-3">
+                        <div class="mb-3">
+                            <label for="subject" class="form-label">제목</label>
+                            <input type="text" name="subject" id="subject" class="form-control">
+                        </div>
+                        <div class="mb-3">
+                            <label for="content" class="form-label">내용</label>
+                            <textarea name="content" id="content" class="form-control" rows="10"></textarea>
+                        </div>
+                        <input type="submit" value="저장하기" class="btn btn-primary my-2">
+                    </div>
                 </form>
-                <a href="#">로그인</a> 후 이용해주세요.
+                <div sec:authorize="isAnonymous()" >
+                    <a th:href="@{/member/login}">로그인</a> 후 이용해주세요.
+                </div>
             </div>
         </div>
-
-        <div class="card t-mt-[30px]">
-            <div class="card-header">
-                질문리스트
-            </div>
-            <ul class="list-group list-group-flush">
-                <li class="list-group-item">
-                    <span class="badge bg-secondary">질문 ID</span>
-                    질문 내용
-                    <a href="#" class="btn btn-sm btn-warning"
-                       onclick="if ( confirm('정말 삭제하시겠습니까?') == false ) return false;">삭제</a>
-                    <a href="#"
-                       class="btn btn-sm btn-secondary">수정</a>
-                </li>
-            </ul>
-        </div>
-    </div>
 </section>
 </html>
