--- a/src/main/resources/templates/product/detail.html
+++ b/src/main/resources/templates/product/detail.html
@@ -6,7 +6,6 @@
             <div class="card-header">
                 상품상세정보
             </div>
-
             <ul class="list-group list-group-flush">
                 <li class="list-group-item">
                     <img class="t-w-full t-max-w-[300px]" src="https://i.imgur.com/PVsCFy1.png" alt="상품이미지">
@@ -30,21 +29,17 @@
                     마켓 : <span class="badge bg-primary">22</span>
                 </li>
             </ul>
-
         </div>
-
         <div class="card t-mt-[30px]">
             <div class="card-header">
                 질문등록
             </div>
-
             <div class="card-body">
                 <form
                         sec:authorize="isAuthenticated()"
                         th:action="@{|/question/create/${product.id}|}"
                         method="POST"
                 >
-
                     <div class="mb-3">
                         <div class="mb-3">
                             <label for="content" class="form-label">내용</label>
@@ -58,5 +53,21 @@
                 </div>
             </div>
         </div>
+        <div class="card t-mt-[30px]">
+            <div class="card-header">
+                질문리스트
+            </div>
+            <ul class="list-group list-group-flush">
+                <li th:each="question : ${product.questionList} " class="list-group-item">
+                    <span th:text="${question.id}" class="badge bg-secondary"></span>
+                    <span th:text="${question.content}"></span>
+                    <a href="#" class="btn btn-sm btn-warning"
+                       onclick="if ( confirm('정말 삭제하시겠습니까?') == false ) return false;">삭제</a>
+                    <a href="#"
+                       class="btn btn-sm btn-secondary">수정</a>
+                </li>
+            </ul>
+        </div>
+    </div>
 </section>
 </html>
