--- a/src/main/resources/templates/product/detail.html
+++ b/src/main/resources/templates/product/detail.html
@@ -63,7 +63,7 @@
                     <span th:text="${question.content}"></span>
                     <a th:href="@{|/question/modify/${question.id}|}"
                        class="btn btn-sm btn-primary">수정</a>
-                    <a href="#" class="btn btn-sm btn-warning"
+                    <a th:href="@{|/question/delete/${question.id}|}" class="btn btn-sm btn-warning"
                        onclick="if ( confirm('정말 삭제하시겠습니까?') == false ) return false;">삭제</a>
                 </li>
             </ul>
