디ì스타일 수정

--- a/src/main/resources/templates/product/list.html
+++ b/src/main/resources/templates/product/list.html
@@ -4,17 +4,23 @@
     <div class="container">
         <h1 class="t-text-[1.5rem] t-font-bold">강의리스트</h1>
         <ul class="t-grid t-grid-cols-1 sm:t-grid-cols-2 md:t-grid-cols-3 lg:sm:t-grid-cols-4 t-gap-[20px] t-mt-3">
-            <li  th:each="product, loop  : ${productList}" class="t-flex t-flex-col">
-                <a data-before="VIEW MORE" href="#"
-                   class="">
-                    <img class="t-block t-w-full" src="https://i.imgur.com/PVsCFy1.png" alt="">
+            <li  th:each="product, loop  : ${productList}" class="t-flex t-flex-col t-group">
+                <a data-before="VIEW MORE" th:href="@{|/product/detail/${product.id}|}"
+                   class="t-relative t-overflow-hidden t-rounded
+                   before:t-content-[''] before:t-absolute before:t-inset-0 before:t-bg-[#00000000] group-hover:before:t-bg-[#00000055] before:t-transition-all
+                   after:t-content-[attr(data-before)] after:t-hidden group-hover:after:t-block after:t-no-underline after:t-text-white after:t-border-2 after:t-border-white after:t-border-solid after:t-rounded after:t-p-2 after:t-whitespace-nowrap after:t-absolute after:t-top-[50%] after:t-left-[50%] after:t-translate-y-[-50%] after:t-translate-x-[-50%] after:t-transition-all"
+                >
+                    <img class="t-block t-w-full t-transition-all group-hover:t-scale-110 t-relative t--z-50" src="https://i.imgur.com/PVsCFy1.png" alt="">
                 </a>
-                <a th:text="${product.name}" class="t-text-center t-mt-2" th:href="@{|/product/detail/${product.id}|}">
+                <a th:text="${product.name}" class="t-text-center t-mt-2 t-no-underline t-text-black t-italic group-hover:t-underline" th:href="@{|/product/detail/${product.id}|}">
                 </a>
-                <a th:text="${product.price}+원" class="t-text-center t-mt-2" th:href="@{|/product/detail/${product.id}|}">
+                <a th:text="@{|\ ${product.price}원|}" class="t-text-center t-mt-2 t-no-underline t-text-gray-400 group-hover:t-text-blue-500" th:href="@{|/product/detail/${product.id}|}">
+                    <i class="fas fa-won-sign"></i>
                 </a>
             </li>
         </ul>
+        <!-- 페이징처리 시작 -->
+        <!-- 페이징처리 끝 -->
     </div>
 </section>
 </html>
