--- a/src/main/resources/static/resource/common/common.css
+++ b/src/main/resources/static/resource/common/common.css
@@ -15,6 +15,10 @@
   position: relative;
 }
 
+.t--z-50 {
+  z-index: -50;
+}
+
 .t-my-\[0px\] {
   margin-top: 0px;
   margin-bottom: 0px;
@@ -32,8 +36,20 @@
   margin-top: 0.5rem;
 }
 
+.t-mt-5 {
+  margin-top: 1.25rem;
+}
+
+.t-mt-12 {
+  margin-top: 3rem;
+}
+
 .t-block {
   display: block;
+}
+
+.t-inline-block {
+  display: inline-block;
 }
 
 .t-flex {
@@ -50,6 +66,18 @@
 
 .t-w-full {
   width: 100%;
+}
+
+.t-w-20 {
+  width: 5rem;
+}
+
+.t-w-16 {
+  width: 4rem;
+}
+
+.t-max-w-screen-md {
+  max-width: 768px;
 }
 
 .t-max-w-\[300px\] {
@@ -80,8 +108,21 @@
   gap: 20px;
 }
 
+.t-overflow-hidden {
+  overflow: hidden;
+}
+
 .t-whitespace-nowrap {
   white-space: nowrap;
+}
+
+.t-rounded {
+  border-radius: 0.25rem;
+}
+
+.t-object-cover {
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .t-py-\[20px\] {
@@ -101,12 +142,37 @@
   font-size: 20px;
 }
 
-.t-text-\[1\.5rem\] {
-  font-size: 1.5rem;
+.t-text-\[1\.2rem\] {
+  font-size: 1.2rem;
 }
 
 .t-font-bold {
   font-weight: 700;
+}
+
+.t-italic {
+  font-style: italic;
+}
+
+.t-text-black {
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
+}
+
+.t-text-gray-400 {
+  --tw-text-opacity: 1;
+  color: rgb(156 163 175 / var(--tw-text-opacity));
+}
+
+.t-no-underline {
+  -webkit-text-decoration-line: none;
+          text-decoration-line: none;
+}
+
+.t-transition-all {
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
 }
 
 @font-face {
@@ -254,17 +320,48 @@ html > body :is(h1, h2, h3, h4, h5, h6) {
   content: var(--tw-content);
 }
 
-.hover\:before\:t-bg-\[\#00000055\]:hover::before {
+.t-group:hover .group-hover\:t-scale-110 {
+  --tw-scale-x: 1.1;
+  --tw-scale-y: 1.1;
+  transform: var(--tw-transform);
+}
+
+.t-group:hover .group-hover\:t-text-blue-500 {
+  --tw-text-opacity: 1;
+  color: rgb(59 130 246 / var(--tw-text-opacity));
+}
+
+.t-group:hover .group-hover\:t-underline {
+  -webkit-text-decoration-line: underline;
+          text-decoration-line: underline;
+}
+
+.t-group:hover .group-hover\:before\:t-bg-\[\#00000055\]::before {
   content: var(--tw-content);
   background-color: #00000055;
 }
 
-.hover\:after\:t-block:hover::after {
+.t-group:hover .group-hover\:after\:t-block::after {
   content: var(--tw-content);
   display: block;
 }
 
 @media (min-width: 640px) {
+  .sm\:t-w-10 {
+    width: 2.5rem;
+  }
+
+  .sm\:t-w-20 {
+    width: 5rem;
+  }
+
+  .sm\:t-w-40 {
+    width: 10rem;
+  }
+
+  .sm\:t-w-1 {
+    width: 0.25rem;
+  }
   .sm\:t-grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
