--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -7,7 +7,7 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <title>test</title>
+    <title>코잘마켓</title>
 
     <!-- 제이쿼리 -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
@@ -15,6 +15,7 @@
     <!-- 부트스트랩 -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/css/bootstrap.min.css">
     <script defer src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 
 <body class="t-flex t-flex-col t-min-h-screen t-pt-[56px]">
@@ -47,14 +48,20 @@
                         <a class="nav-link" href="/member/login">로그인</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/member/join">회원가입</a>
+                        <a class="nav-link" sec:authorize="isAnonymous()" href="/member/join">회원가입</a>
                     </li>
 
+                    <li class="nav-item">
+                        <a class="nav-link" sec:authorize="isAuthenticated()" href="/cart/list">
+                            장바구니
+                        </a>
+                    </li>
                 </ul>
-                <form class="d-flex">
-                    <input class="form-control me-2" type="search" placeholder="상품명을 입력해주세요." aria-label="Search">
-                    <button class="btn btn-outline-info t-whitespace-nowrap" type="submit">검색</button>
-                </form>
+                <div class="nav-link" sec:authorize="isAuthenticated()" th:text="@{|${#authentication.name}님 반갑습니다|}"></div>
+                <div class="d-flex">
+                    <input  type="text" id="search_kw"  th:value="${kw}" class="form-control me-2" placeholder="상품명을 입력해주세요." aria-label="Search">
+                    <button class="btn btn-outline-info t-whitespace-nowrap" type="button" id="btn_search">검색</button>
+                </div>
             </div>
         </div>
     </nav>
