--- a/src/main/resources/templates/product/list.html
+++ b/src/main/resources/templates/product/list.html
@@ -4,7 +4,7 @@
     <div class="container">
         <h1 class="t-text-[1.5rem] t-font-bold">강의리스트</h1>
         <ul class="t-grid t-grid-cols-1 sm:t-grid-cols-2 md:t-grid-cols-3 lg:sm:t-grid-cols-4 t-gap-[20px] t-mt-3">
-            <li  th:each="product, loop  : ${productList}" class="t-flex t-flex-col t-group">
+            <li  th:each="product, loop  : ${paging}" class="t-flex t-flex-col t-group">
                 <a data-before="VIEW MORE" th:href="@{|/product/detail/${product.id}|}"
                    class="t-relative t-overflow-hidden t-rounded
                    before:t-content-[''] before:t-absolute before:t-inset-0 before:t-bg-[#00000000] group-hover:before:t-bg-[#00000055] before:t-transition-all
@@ -20,6 +20,25 @@
             </li>
         </ul>
         <!-- 페이징처리 시작 -->
+        <ul  th:if="${!paging.isEmpty()}" class="pagination justify-content-center t-mt-12">
+            <li class="page-item" th:classappend="${!paging.hasPrevious} ? 'disabled'">
+                <a class="page-link"
+                   th:href="@{|?page=${paging.number-1}|}">
+                    <span>이전</span>
+                </a>
+            </li>
+            <li th:each="page: ${#numbers.sequence(0, paging.totalPages-1)}"
+                th:if="${page >= paging.number-5 and page <= paging.number+5}"
+                th:classappend="${page == paging.number} ? 'active'"
+                class="page-item">
+                <a th:text="${page + 1}" class="page-link" th:href="@{|?page=${page}|}"></a>
+            </li>
+            <li class="page-item" th:classappend="${!paging.hasNext} ? 'disabled'">
+                <a class="page-link" th:href="@{|?page=${paging.number+1}|}">
+                    <span>다음</span>
+                </a>
+            </li>
+        </ul>
         <!-- 페이징처리 끝 -->
     </div>
 </section>
