장바구니 기능 개발 제품 상세 페이지 작업

--- a/src/main/resources/templates/product/detail.html
+++ b/src/main/resources/templates/product/detail.html
@@ -8,27 +8,44 @@
             </div>
             <ul class="list-group list-group-flush">
                 <li class="list-group-item">
-                    <img class="t-w-full t-max-w-[300px]" src="https://i.imgur.com/PVsCFy1.png" alt="상품이미지">
+                <li class="list-group-item">
+                    <img class="t-w-full t-max-w-[300px] t-rounded" src="https://i.imgur.com/PVsCFy1.png" alt="상품이미지">
                 </li>
                 <li class="list-group-item">
-                    번호 : <span class="badge bg-primary">123</span>
+                    <span class="t-w-16 t-inline-block">번호</span>
+                    <span th:text="${product.id}" class="badge bg-primary">{{product.id}}</span>
                 </li>
                 <li class="list-group-item">
-                    등록날짜 : <span class="badge bg-secondary">2023-03-11</span>
+                    <span class="t-w-16 t-inline-block">상품명</span>
+                    <span th:text="${product.name}" class="t-font-bold"></span>
                 </li>
                 <li class="list-group-item">
-                    수정날짜 : <span class="badge bg-secondary">2023-03-11</span>
+                    <span class="t-w-16 t-inline-block">가격</span>
+                    <span th:text="${product.price}" class="t-font-bold">{{product.sale_price|intcomma}}</span>원
                 </li>
+                <!--  TODO: 마켓정보 추가      -->
+                <!--                <li class="list-group-item">-->
+                <!--                    <span class="t-w-16 t-inline-block">마켓</span> -->
+                <!--                    <span class="badge bg-primary"></span>-->
+                <!--                </li> -->
                 <li class="list-group-item">
-                    상품명 : <span th:text="${product.name}" class="t-font-bold"></span>
+                    등록날짜 <span th:text="${#temporals.format(product.createDate, 'yyyy-MM-dd HH:mm')}" class="badge bg-secondary"></span>
                 </li>
-                <li class="list-group-item">
-                    가격 : <span  th:text="${product.price}" class="t-font-bold"></span>원
-                </li>
-                <li class="list-group-item">
-                    마켓 : <span class="badge bg-primary">22</span>
+                <li class="list-group-item" th:if="${product.modifyDate != null}">
+                    수정날짜 : <span th:text="${#temporals.format(product.modifyDate, 'yyyy-MM-dd HH:mm')}" class="badge bg-secondary"></span>
                 </li>
             </ul>
+        </div>
+        <div class="card t-mt-[30px]">
+            <div class="card-header">
+                장바구니 담기
+            </div>
+
+            <div class="card-body">
+                <form th:action="@{|/cart/add/${product.id}|}" method="POST">
+                    <input type="submit" value="장바구니 담기" class="btn btn-outline-success">
+                </form>
+            </div>
         </div>
         <div class="card t-mt-[30px]">
             <div class="card-header">
@@ -45,10 +62,10 @@
                             <label for="content" class="form-label">내용</label>
                             <textarea name="content" id="content" class="form-control" rows="10"></textarea>
                         </div>
-                        <input type="submit" value="저장하기" class="btn btn-primary my-2">
+                        <input type="submit" value="등록하기" class="btn btn-primary my-2">
                     </div>
                 </form>
-                <div sec:authorize="isAnonymous()" >
+                <div class="t-text-gray-400" sec:authorize="isAnonymous()" >
                     <a th:href="@{/member/login}">로그인</a> 후 이용해주세요.
                 </div>
             </div>
@@ -57,20 +74,26 @@
             <div class="card-header">
                 질문리스트
             </div>
-            <ul class="list-group list-group-flush">
-                <li th:each="question : ${product.questionList} " class="list-group-item">
+            <ul th:if="${#lists.size(product.questionList)} > 0" class="list-group list-group-flush">
+                <li th:each="question : ${product.questionList}" class="list-group-item">
                     <span th:text="${question.id}" class="badge bg-secondary"></span>
                     <span th:text="${question.content}"></span>
                     <a th:href="@{|/question/modify/${question.id}|}"
                        sec:authorize="isAuthenticated()"
                        th:if="${question.member != null and #authentication.getPrincipal().getUsername() == question.member.username}"
-                       class="btn btn-sm btn-primary">수정</a>
+                       class="btn btn-sm btn-primary"
+                    >수정</a>
                     <a th:href="@{|/question/delete/${question.id}|}" class="btn btn-sm btn-warning"
                        sec:authorize="isAuthenticated()"
                        th:if="${question.member != null and #authentication.getPrincipal().getUsername() == question.member.username}"
                        onclick="if ( confirm('정말 삭제하시겠습니까?') == false ) return false;">삭제</a>
                 </li>
             </ul>
+            <div th:unless="${#lists.size(product.questionList)} > 0" class="card-body">
+                <div class="t-text-gray-400">
+                    질문이 없습니다
+                </div>
+            </div>
         </div>
     </div>
 </section>
