로그인처리

--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -41,11 +41,8 @@
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="/member/logout">로그아웃</a>
-                    </li>
-
-                    <li class="nav-item">
-                        <a class="nav-link" href="/member/login">로그인</a>
+                        <a class="nav-link" sec:authorize="isAnonymous()" th:href="@{/member/login}">로그인</a>
+                        <a class="nav-link" sec:authorize="isAuthenticated()" th:href="@{/member/logout}">로그아웃</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" sec:authorize="isAnonymous()" href="/member/join">회원가입</a>
