--- a/src/main/resources/templates/member/login.html
+++ b/src/main/resources/templates/member/login.html
@@ -16,6 +16,7 @@
               <input type="password" class="form-control" id="password" name="password">
             </div>
             <button type="submit" class="btn btn-primary">로그인</button>
+            <a class="btn btn-warning" href="/oauth2/authorization/kakao"><i class="fas fa-comment"></i> 카카오로 로그인</a>
           </form>
         </div>
       </div>
