--- a/src/main/resources/templates/product/list.html
+++ b/src/main/resources/templates/product/list.html
@@ -10,7 +10,7 @@
                    before:t-content-[''] before:t-absolute before:t-inset-0 before:t-bg-[#00000000] group-hover:before:t-bg-[#00000055] before:t-transition-all
                    after:t-content-[attr(data-before)] after:t-hidden group-hover:after:t-block after:t-no-underline after:t-text-white after:t-border-2 after:t-border-white after:t-border-solid after:t-rounded after:t-p-2 after:t-whitespace-nowrap after:t-absolute after:t-top-[50%] after:t-left-[50%] after:t-translate-y-[-50%] after:t-translate-x-[-50%] after:t-transition-all"
                 >
-                    <img class="t-block t-w-full t-transition-all group-hover:t-scale-110 t-relative t--z-50" src="https://i.imgur.com/PVsCFy1.png" alt="">
+                    <img class="t-block t-w-full t-transition-all group-hover:t-scale-110 t-relative t--z-50" th:src="@{|/gen/${product.thumbnailImg}|}" alt="섬네일 사진">
                 </a>
                 <a th:text="${product.name}" class="t-text-center t-mt-2 t-no-underline t-text-black t-italic group-hover:t-underline" th:href="@{|/product/detail/${product.id}|}">
                 </a>
