--- a/src/main/resources/templates/product/detail.html
+++ b/src/main/resources/templates/product/detail.html
@@ -17,7 +17,7 @@
                 </li>
                 <li class="list-group-item">
                     <span class="t-w-16 t-inline-block">상품명</span>
-                    <span th:text="${product.name}" class="t-font-bold"></span>
+                    <span th:text="${product.title}" class="t-font-bold"></span>
                 </li>
                 <li class="list-group-item">
                     <span class="t-w-16 t-inline-block">설명</span>
