--- a/src/main/resources/templates/adm/product/create.html
+++ b/src/main/resources/templates/adm/product/create.html
@@ -16,9 +16,9 @@
 </form>
 
 <ul th:each="product : ${productList}">
-    <li th:text="${product.name}"></li>
+    <li th:text="${product.title}"></li>
     <li th:text="${product.description}"></li>
-    <li><img th:src="@{|/gen/${product.thumbnailImg}|}" alt="test이미지"></li>
+    <!--        <li><img th:src="@{|/gen/${product.thumbnailImg}|}" alt="test이미지"></li>-->
 </ul>
 
 </body>
